Cambio de gymfitness_clases a gymfitness_portfolio

--- a/projects/gymfitness/wp-content/themes/gymfitnesstheme/style.css
+++ b/projects/gymfitness/wp-content/themes/gymfitnesstheme/style.css
@@ -17,7 +17,7 @@
     --fuente-headings: 'Staatliches', cursive;
 
     /** Colores*/
-    --primario: #ff5b00;
+    --primario: #2002e0;
     --gris-oscuro: #2f2e2e;
     --gris-claro: #ebebeb;
     --blanco: #fff;
