--- a/projects/gymfitness/wp-content/themes/gymfitnesstheme/style.css
+++ b/projects/gymfitness/wp-content/themes/gymfitnesstheme/style.css
@@ -67,7 +67,7 @@ h4 {
 /** Globals **/
 
 p {
-    margin: 0;
+    margin: 0 0 0 10;
 }
 
 a {
@@ -140,6 +140,9 @@ hr {
 /** Utilidades **/
 .text-center {
     text-align: center;
+}
+.text-justify {
+    text-align: justify;
 }
 
 .texto-primary {
@@ -277,26 +280,21 @@ body.home .header {
         border-bottom: 3px solid var(--primario);
     }
 
-    .menu-principal a::before, 
     .menu-principal a::after {
         position: absolute;
         left: 0;
         content: '';
         display: block;
         width: 100%;
-        height: 50%;
+        height: 100%;
         background-color: var(--primario);
         z-index: -1;
-        transform: scaleX(0);
+        transform: scaleY(0);
         transition: transform .6s;
     }
-    .menu-principal a::before {
-        top: 0;
-        transform-origin: left;
-    }
     .menu-principal a::after {
-        top:50%;
-        transform-origin: right;
+        top:0%;
+        transform-origin: bottom;
     }
     .menu-principal a:hover::before {
         transform: scaleX(1);
